user Long.valueOf()